@@ -33,6 +33,12 @@ ifeq ($(DEB_BUILD_ARCH_OS),linux)
 endif
 endif
 
+ifeq (,$(filter noipset,$(DEB_BUILD_OPTIONS)))
+ifeq ($(DEB_BUILD_ARCH_OS),linux)
+     COPTS += -DHAVE_IPSET
+endif
+endif
+
 ifneq (,$(filter nodhcp6,$(DEB_BUILD_OPTIONS)))
      COPTS += -DNO_DHCP6
 endif
