@@ -1,8 +1,9 @@
 dnsmasq (2.66-1) unstable; urgency=low
 
    * New upstream.
+   * Add support for noipset in DEB_BUILD_OPTIONS.
 
- -- Simon Kelley <simon@thekelleys.org.uk>  Fri, 14 Dec 2012 11:58:41 +0000
+ -- Simon Kelley <simon@thekelleys.org.uk>  Fri, 22 Feb 2013 21:52:13 +0000
 
 dnsmasq (2.65-1) unstable; urgency=low
 
